--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/starch-test/$REPO_NAME:$COMMIT_SHA', '.']
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/hello-node', 'hello-node=gcr.io/starch-test/$REPO_NAME:$COMMIT_SHA']
+  args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/$REPO_NAME:$COMMIT_SHA']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=starchtest-hellnode'
