--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/starch-test/$REPO_NAME:v2', '.']
+images:
+- 'gcr.io/$PROJECT_ID/my-image'
 - name: 'gcr.io/cloud-builders/kubectl'
   args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/$REPO_NAME:v2']
   env:
