--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,9 +2,9 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args: ['build', '-t', 'gcr.io/starch-test/$REPO_NAME:v2', '.']
 images:
-- 'gcr.io/$PROJECT_ID/my-image'
+- 'gcr.io/$PROJECT_ID/hello-node'
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/$REPO_NAME:v2']
+  args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/hello-node:v2']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=starchtest-hellnode'
