--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,12 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/starch-test/$REPO_NAME:v2', '.']
+  args: ['build', '-t', 'gcr.io/starch-test/$REPO_NAME:$COMMIT_SHA', '.']
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/hello-node:v2']
+  args: ['set', 'image', 'deployment/starch-test-node', 'hello-node=gcr.io/starch-test/hello-node:$COMMIT_SHA']
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=starchtest-hellnode'
 images:
-- 'gcr.io/$PROJECT_ID/hello-node'
+- 'gcr.io/$PROJECT_ID/hello-node:$COMMIT_SHA'
     
 
