--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,5 +6,5 @@ steps:
   env:
   - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a'
   - 'CLOUDSDK_CONTAINER_CLUSTER=starchtest-hellnode'
-    
+images: ['gcr.io/starch-test/$REPO_NAME:$COMMIT_SHA']   
 
