--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
     "nodemailer-sendgrid-transport": "git+https://github.com/Starchup/nodemailer-sendgrid-transport.git",
-    "starchup-vars": "0.3"
+    "starchup-vars": "0.3",
+    "chai": "4.2.0"
   },
   "scripts": {
     "pretest": "jshint server",
