--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@github.com:Starchup/email-service.git",
   "main": "server/server.js",
   "dependencies": {
-    "bluebird": "1.1.1",
+    "bluebird": "3.5.2",
     "body-parser": "1.18.3",
     "compression": "1.7.3",
     "errorhandler": "1.5.0",
@@ -24,7 +24,8 @@
     "moment": "2.22.2",
     "moment-timezone": "0.5.21",
     "nodemailer-sendgrid-transport": "git+https://github.com/Starchup/nodemailer-sendgrid-transport.git",
-    "starchup-vars": "0.3"
+    "starchup-vars": "0.3",
+    "chai": "4.2.0"
   },
   "scripts": {
     "pretest": "jshint server",
